--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="str_imgvw_description">Deal image placeholder</string>
     <string name="save_menu">save</string>
     <string name="delete_deal">delete</string>
+    <string name="str_btn_select_image">Select Image</string>
 </resources>
