--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="save_menu">save</string>
     <string name="delete_deal">delete</string>
     <string name="str_btn_select_image">Select Image</string>
+    <string name="str_menu_logout">Log out</string>
 </resources>
