--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="str_signin_btntxt">Email sign in </string>
     <string name="str_googlebtn">google sign in </string>
     <string name="str_email_login_btn">Sign up</string>
-    <string name="str_edit_email">Enter email here</string>
-    <string name="str_email_edit_password">Enter password</string>
+    <string name="str_edit_email">Email</string>
+    <string name="str_email_edit_password">Password</string>
     <string name="str_email_activity_title">Sign In</string>
     <string name="str_btn_login">Sign In</string>
     <string name="str_imgvw_description">Deal image placeholder</string>
